--- a/front-end/js/components/header-bar/header-bar.html
+++ b/front-end/js/components/header-bar/header-bar.html
@@ -6,7 +6,7 @@
 		<div class="button trash" ng-click="globalCtrl.removeSelectedPublication()">
 			<div></div>
 		</div>
-		<div class="button" ng-click="globalCtrl.switchView()">
+		<div class="button switch" ng-click="globalCtrl.switchView()">
 			<div></div>
 		</div>
 	</div>
