--- a/front-end/js/components/search-bar/search-bar.html
+++ b/front-end/js/components/search-bar/search-bar.html
@@ -1,17 +1,17 @@
 <div class="search-bar">	
 	<div class="collection-container">
 		<section>
-			<h2>My Library</h2>
-			<span class="count">293</span>
+			<h2 ng-click="searchBarCtrl.clearSearch()">My Library</h2>
+			<!-- <span class="count">293</span> -->
 		</section>
-		<section>
+		<!-- <section>
 			<h2>Collection</h2>
 			<span class="count">1</span>
 		</section>
 		<section class="collection" ng-repeat="collection in searchBarCtrl.allCollections">
 			<h3>{{collection.name}}</h3>
 			<span class="count">{{collection.count}}</span>
-		</section>
+		</section> -->
 		
 	</div>
 	<div class="search-button-container">		
