--- a/front-end/js/components/tag-container/tag-container.html
+++ b/front-end/js/components/tag-container/tag-container.html
@@ -1,3 +1,3 @@
 <p>
-	<span class="tag" ng-repeat="tag in entity.tag">{{tag}}</span>
+	<span class="tag" ng-repeat="tag in entity.tags">{{tag}}</span>
 </p>
